--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["ember", "ember.*"]
