--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,9 @@
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
+[project]
+name = "ember-fixed"
+version = "0.2.0"
 dynamic = ["dependencies"]
 
 [tool.setuptools.dynamic]
