change import name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,4 @@ dependencies = {file = ["requirements.txt"]}
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["ember", "ember.*"]
+include = ["emberFixed", "emberFixed.*"]
